--- a/firstProjectAngular/src/app/home/home.component.html
+++ b/firstProjectAngular/src/app/home/home.component.html
@@ -1,1 +1,6 @@
 PROVA PROGETTO
+
+<mat-form-field class="example-full-width" appearance="outline">
+  <mat-label>Company (disabled)</mat-label>
+  <input matInput  value="Google">
+</mat-form-field>
