--- a/firstProjectAngular/src/app/app.component.html
+++ b/firstProjectAngular/src/app/app.component.html
@@ -1,2 +1,8 @@
-
+<p>
+    <mat-toolbar>
+        <span>
+        </span>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"></button>
+    </mat-toolbar>
+</p>
 <router-outlet></router-outlet>
