--- a/firstProjectAngular/src/app/home/home.component.html
+++ b/firstProjectAngular/src/app/home/home.component.html
@@ -64,7 +64,7 @@
                   <button mat-icon-button (click)="editProject(element)">
                     <mat-icon>edit</mat-icon>
                   </button>
-                  <button mat-icon-button (click)="deleteProject(element.id)">
+                  <button mat-icon-button (click)="openDialog()">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </td>
