--- a/firstProjectAngular/src/app/app.component.scss
+++ b/firstProjectAngular/src/app/app.component.scss
@@ -1,6 +1,9 @@
-mat-toolbar{
-    background-color: grey;
-}
 .example-spacer {
     flex : 1  1 auto;
  }
+
+ .pointed{
+    cursor: pointer;
+    padding: 10px;
+ }
+ 
