--- a/firstProjectAngular/src/styles.scss
+++ b/firstProjectAngular/src/styles.scss
@@ -9,3 +9,44 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 table {
     width: 100%;
   }
+
+  
+.b-color{
+  background-color: rgba($color: #d0c6bc, $alpha: 1.0) 
+}
+
+.color{
+  color: rgba($color: #4d3f2f, $alpha: 1.0)
+}
+
+.btn-16 {
+  border: none;
+  color: #000;
+}
+.btn-16:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  direction: rtl;
+  z-index: -1;
+  box-shadow:
+   -7px -7px 20px 0px rgba($color: #d0c6bc, $alpha: 1.0),
+   -4px -4px 5px 0px #fff9,
+   7px 7px 20px 0px #0002,
+   4px 4px 5px 0px #0001;
+  transition: all 0.3s ease;
+}
+.btn-16:hover {
+  color: rgba($color: #925920, $alpha: 1.0);
+}
+.btn-16:hover:after {
+  left: auto;
+  right: 0;
+  width: 100%;
+}
+.btn-16:active {
+  top: 2px;
+}
