--- a/firstProjectAngular/src/styles.scss
+++ b/firstProjectAngular/src/styles.scss
@@ -5,7 +5,11 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
+.width-100{
+  width: 100%;
+}
 
 table {
     width: 100%;
+   
   }
