--- a/firstProjectAngular/src/app/anagrafica/anagrafica.component.html
+++ b/firstProjectAngular/src/app/anagrafica/anagrafica.component.html
@@ -12,12 +12,13 @@
             <mat-tab-group dynamicHeight>
               <mat-tab label="Anagrafica">
                 <div class="example-small-box mat-elevation-z4">
-                  <div class="row p-4 bg-ap">
-                    <div class="col-6 ">
-                      <h4>ATTIVITA' PROGETTO</h4>
+
+                  <div class="row p-4 bg-ap ">
+                    <div class="col-6 d-flex align-items-center">
+                      ATTIVITA' PROGETTO
                     </div>
                     <div class="col-6 d-flex justify-content-end ">
-                      <button class="mod-button" mat-raised-button color="primary">
+                      <button mat-raised-button color="primary">
                         MODIFICA
                         <mat-icon>edit</mat-icon>
                       </button>
@@ -36,125 +37,124 @@
     </div>
   </div>
   <mat-card>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-4 col-12">
-          <mat-label class="example-full-width ">NOME PROGETTO</mat-label>
-          <form class="example-form">
+      <div class="container-fluid">
+        <form>
+        <div class="row">
+          <div class="col-lg-4 col-12">
+            <mat-label class="example-full-width ">NOME PROGETTO</mat-label>
+
             <mat-form-field class="example-full-width" appearance="outline">
               <input type="text" matInput placeholder="">
             </mat-form-field>
-          </form>
-        </div>
 
-        <div class="col-lg-4 col-12">
-          <mat-label class="example-full-width">SETTORE</mat-label>
-          <form class="example-form">
+          </div>
+
+          <div class="col-lg-4 col-12">
+            <mat-label class="example-full-width">SETTORE</mat-label>
+
             <mat-form-field class="example-full-width " appearance="outline">
               <input type="text" matInput placeholder="">
             </mat-form-field>
-          </form>
-        </div>
-        <div class="col-lg-4 col-12">
-          <mat-label class="example-full-width">DATA INIZIO PREVENTIVA</mat-label>
-          <form class="example-form">
+
+          </div>
+          <div class="col-lg-4 col-12">
+            <mat-label class="example-full-width">DATA INIZIO PREVENTIVA</mat-label>
+
             <mat-form-field class="example-full-width " appearance="outline">
               <input type="date" matInput placeholder="">
             </mat-form-field>
-          </form>
+
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm">
+        <div class="row">
           <mat-label class="example-full-width">CLIENTE</mat-label>
-          <form class="example-form">
+          <div class="col-sm">
+            
+
             <mat-form-field class="example-full-width " appearance="outline">
               <input type="text" matInput placeholder="">
             </mat-form-field>
-          </form>
-        </div>
-        <div class="col-sm">
-          <mat-label class="example-full-width">BUSINESS UNIT</mat-label>
-          <form class="example-form">
+
+          </div>
+          <div class="col-sm">
+            <mat-label class="example-full-width">BUSINESS UNIT</mat-label>
+
             <mat-form-field class="example-full-width " appearance="outline">
               <input type="text" matInput placeholder="">
             </mat-form-field>
-          </form>
-        </div>
-        <div class="col-sm">
-          <mat-label class="example-full-width">DATA FINE PREVENTIVA</mat-label>
-          <form class="example-form">
+
+          </div>
+          <div class="col-sm">
+            <mat-label class="example-full-width">DATA FINE PREVENTIVA</mat-label>
+
             <mat-form-field class="example-full-width " appearance="outline">
               <input type="date" matInput placeholder="">
             </mat-form-field>
-          </form>
+
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-8 ">
-          <div class="row ">
-            <div class="col-sm-6 col-12">
-              <mat-label class="example-full-width">TIPO PROGETTO</mat-label>
-              <form class="example-form">
+        <div class="row">
+          <div class="col-8 ">
+            <div class="row ">
+              <div class="col-sm-6 col-12">
+                <mat-label class="example-full-width">TIPO PROGETTO</mat-label>
+
                 <mat-form-field class="example-full-width " appearance="outline">
                   <input type="text" matInput placeholder="">
                 </mat-form-field>
-              </form>
-            </div>
-            <div class="col-sm-6 col-12">
-              <mat-label class="example-full-width">STATO</mat-label>
-              <form class="example-form">
+
+              </div>
+              
+              <div class="col-sm-6 col-12">
+                <mat-label class="example-full-width">STATO</mat-label>
                 <mat-form-field class="example-full-width" appearance="outline">
                   <input type="text" matInput placeholder="">
                 </mat-form-field>
-              </form>
-            </div>
-            <div class="col-sm-6 col-12">
-              <mat-label class="example-full-width">TIPO DI PROGETTO</mat-label>
-              <form class="example-form">
+              </div>
+              <div class="col-sm-6 col-12">
+                <mat-label class="example-full-width">TIPO DI PROGETTO</mat-label>
+
                 <mat-form-field class="example-full-width " appearance="outline">
                   <input type="text" matInput placeholder="">
                 </mat-form-field>
-              </form>
-            </div>
-            <div class="col-sm-6 col-12 ">
-              <mat-label class="example-full-width">NOTE</mat-label>
-              <form class="example-form">
+              </div>
+              <div class="col-sm-6 col-12 ">
+                <mat-label class="example-full-width">NOTE</mat-label>
+
                 <mat-form-field class="example-full-width " appearance="outline">
-                  <input type="checkbox" matInput placeholder="">
+                  <input type="text" matInput placeholder="">
                 </mat-form-field>
-              </form>
+
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 col-12 example-full-width">
-          <mat-card class="mod-button example-full-width">
-            <mat-icon>supervisor_account</mat-icon>
-            <mat-label class="p-2 example-full-width ">LOREM ISPUM</mat-label>
-          </mat-card>
-          <mat-card class="p-5 example-full-width">
-            <mat-label>ACCOUNT</mat-label>
-            <form class="example-form">
-              <mat-form-field appearance="outline">
-                <input type="text" matInput placeholder="">
-              </mat-form-field>
-            </form>
-            <mat-label>REFERENTE TECNICO</mat-label>
-            <form class="example-form">
-              <mat-form-field appearance="outline">
-                <input type="text" matInput placeholder="">
-              </mat-form-field>
-            </form>
-          </mat-card>
-        </div>
+          <div class="col-sm-4 col-12 example-full-width">
+            <mat-card class="mod-button example-full-width">
+              <mat-icon>supervisor_account</mat-icon>
+              <mat-label class="p-2 example-full-width ">LOREM ISPUM</mat-label>
+            </mat-card>
+            <mat-card class="p-5 example-full-width">
+              <mat-label>ACCOUNT</mat-label>
 
-       
+              <mat-form-field appearance="outline">
+                <input type="text" matInput placeholder="">
+              </mat-form-field>
+
+              <mat-label>REFERENTE TECNICO</mat-label>
+
+              <mat-form-field appearance="outline">
+                <input type="text" matInput="" placeholder="">
+
+              </mat-form-field>
+              
+            </mat-card>
+          </div>
+        </div>
+        </form>
       </div>
-    </div>
-
   </mat-card>
-
 </div>
+
 
 
 
