--- a/firstProjectAngular/src/app/anagrafica/anagrafica.component.scss
+++ b/firstProjectAngular/src/app/anagrafica/anagrafica.component.scss
@@ -14,3 +14,9 @@
  .example-full-width {
     width: 85%;
  }
+
+ .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
